Closed Bug 1869685 Opened 2 years ago Closed 2 years ago

115.5.2 starts to a blank screen - 0x80004005 (NS_ERROR_FAILURE) [nsIMsgFolder.server] setFolderPropertiesFromFolder chrome://messenger/content/about3Pane.js:4026

Categories

(Thunderbird :: Mail Window Front End, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115 wontfix)

RESOLVED FIXED
128 Branch
Tracking Status
thunderbird_esr115 --- wontfix

People

(Reporter: ityner, Assigned: mkmelin)

References

(Blocks 1 open bug, )

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:120.0) Gecko/20100101 Firefox/120.0

Steps to reproduce:

I updated Thunderbird today to 115.5.2 and when I open the client, the screen appears to be blank with no accounts or emails listed. Thunderbird does appear to be working, but nothing is visible.

Actual results:

Blank screen and less user interface parts are viewable now.

Expected results:

Should have all accounts listed on the left as usual, and all the emails should be viewable per each account and all of the UI features should be accessible.

Anything in the Error console? Ctrl+Shift+J

Can confirm this issue after updating to 115.5.2.

(In reply to Magnus Melin [:mkmelin] from comment #1)

Anything in the Error console? Ctrl+Shift+J

Uncaught (in promise) NS_ERROR_FAILURE: Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgFolder.server]
setFolderPropertiesFromFolder chrome://messenger/content/about3Pane.js:4026
setServer chrome://messenger/content/about3Pane.js:3922
_createServerRow chrome://messenger/content/about3Pane.js:2005
initServer chrome://messenger/content/about3Pane.js:712
_initMode chrome://messenger/content/about3Pane.js:1991
_toggleMode chrome://messenger/content/about3Pane.js:1948
set activeModes chrome://messenger/content/about3Pane.js:1851
init chrome://messenger/content/about3Pane.js:1504
about3Pane.js:4026
Uncaught (in promise) TypeError: win.messageBrowser is undefined
openTab chrome://messenger/content/mailTabs.js:103
mailTabs.js:103:13
Missing resource in locale en-GB: devtools/client/toolbox.ftl

Is it any different from http://ftp.mozilla.org/pub/thunderbird/releases/115.5.1/ ?
If it is, can you email me the information from Help | Troubleshooting information (tick the "Include account names")

It is the same, do you know how to revert to an earlier release than 15.5.2?

Thanks for the help, I was able to revert and it looks like this was a Google Chrome issue. Cheers, Ian

Status: UNCONFIRMED → RESOLVED
Closed: 2 years ago
Resolution: --- → WORKSFORME

Thanks for the update. But If you reinstalled an older version, then this isn't fixed.

Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: WORKSFORME → ---
Summary: Just updated to Thunderbird 115.5.2 and now there is a blank screen → 115.5.2 starts to a blank screen - 0x80004005 (NS_ERROR_FAILURE) [nsIMsgFolder.server] setFolderPropertiesFromFolder chrome://messenger/content/about3Pane.js:4026
Flags: needinfo?(mkmelin+mozilla)

The reporter there made a new install and that cleared things up.
To analyze the cause we'd have to get the prefs.js file to look for clues. Probably the troubleshooting information would have it as well.

Flags: needinfo?(mkmelin+mozilla)

(In reply to Magnus Melin [:mkmelin] from comment #8)

The reporter there made a new install and that cleared things up.
To analyze the cause we'd have to get the prefs.js file to look for clues. Probably the troubleshooting information would have it as well.

see https://support.mozilla.org/en-US/questions/1435217

Flags: needinfo?(mkmelin+mozilla)

Not enough details to say anything. If idn hostname, it's one of the other bugs.

Flags: needinfo?(mkmelin+mozilla)
Status: REOPENED → UNCONFIRMED
Ever confirmed: false
Keywords: stalled

The reporter had, for some reason, a hostname "2". During url mutation this gets normalized to 0.0.0.2 instead so we can't find the server.

Assignee: nobody → mkmelin+mozilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

.SetSpec("imap://"_ns + thisHostname) looks surprising if this is a POP server. Please consider adding a comment or basing the scheme on type.

Attachment #9402477 - Attachment description: Bug 1869685 - avoid blank 3pane for hostname "2". r=#thunderbird-reviewers → Bug 1869685 - avoid blank 3pane for hostname "2". r=babolivier
Target Milestone: --- → 128 Branch

Drive-by comment: Is an IMAP URL really the best choice here? It has quite some processing involved:
https://searchfox.org/comm-central/rev/29cc9f4e0e23700f3f2232bd828ff3a80c78eea5/mailnews/imap/src/nsImapService.cpp#2191-2276.

Without folders it's not doing much extra.

Pushed by alessandro@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/335357b81b0e
avoid blank 3pane for hostname "2". r=babolivier

Status: ASSIGNED → RESOLVED
Closed: 2 years ago2 years ago
Resolution: --- → FIXED
No longer blocks: TBblankUIonstartup
Regressions: 1906529
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: