Bug 1869685 - avoid blank 3pane for hostname "2". r=babolivier

Differential Revision: https://phabricator.services.mozilla.com/D210809

--HG--
extra : moz-landing-system : lando